# moj-ingestion

./: 0_download_git_repo.py  1_concat_markdown.py  2_parse_component_to_json.py  3_insert_to_milvus.py  README.md  README_MILVUS.md  README_PARSE_COMPONENT_TO_JSON.md  alert-combined.md  alert-component.json  concat_markdown.py  insert_to_milvus.py  markdown_vectorizer.py  parse_component_to_json.py  pyproject.toml  requirements-milvus.txt  sample.md
concat-task/: .dockerignore  Containerfile  README.md  build.sh  ocp-build.yaml
docs/: BATCH_MODE_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE_INGESTION_PIPELINE.md  QUICK_REFERENCE_SEARCH_API.md  README-CONCAT_MARKDOWN.md  README_API.md  README_BATCH_MODE.md  README_CONTAINER.md  README_ENVIRONMENT_VARIABLES.md  README_GIT_DOWNLOAD.md  README_MILVUS.md  README_PARSE_COMPONENT_TO_JSON.md  README_VECTORIZER.md
ingestion-pipeline/: git-clone-task.yaml  git-clone.yaml  moj-design-system-pipeline-run.yaml  pipeline.yaml
insert-to-milvus/: Containerfile  ocp-build.yaml  requirements-milvus.txt
milvus/: docker-compose-2.3.3.yml  docker-compose.yaml
parse-to-json/: .dockerignore  Containerfile  README.md  build.sh  ocp-build.yaml  requirements.txt
scripts/: batch_insert.sh  batch_process_all_components.sh  example_full_pipeline_env.sh  start_api.sh  test_api.sh  test_api_client.py
search_api/: Containerfile  api_search.py  build_container.sh  docker-compose.yml  moj_milvus_kb.py  ocp_deploy.yaml  requirements-api.txt
